# ncnn_android_sample

./: README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/ncnn_android_sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: squeezencnn_jni.cpp
app/src/main/java/com/example/ncnn_android_sample/: MainActivity.java  SqueezeNcnn.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ncnn_android_sample/: ExampleUnitTest.java
openCVLibrary310/: build.gradle
openCVLibrary310/src/main/: AndroidManifest.xml
openCVLibrary310/src/main/java/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  JavaCameraView.java
openCVLibrary310/src/main/java/org/opencv/core/: Core.java
openCVLibrary310/src/main/java/org/opencv/features2d/: FeatureDetector.java
